# outl

./: .gitignore  .imgbotconfig  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package.json
crates/outl-actions/: CLAUDE.md  Cargo.toml
crates/outl-actions/src/: backlinks.rs  backlinks_index.rs  backlinks_sort.rs  block.rs  clipboard.rs  clock.rs  collapsed.rs  dates.rs  deeplink.rs  desync.rs  error.rs  exec.rs  history.rs  ingest.rs  journal.rs  lib.rs  outline.rs  page.rs  page_merge.rs  page_repair_titles.rs  person.rs  quote.rs  resolve.rs  storage_scope.rs  sync.rs  text.rs  todo.rs  tree.rs
crates/outl-actions/src/block/: create.rs  edit.rs  mod.rs  moves.rs  split.rs
crates/outl-actions/src/paste/: anchors.rs  mod.rs  normalize.rs
crates/outl-actions/src/template/: call.rs  instantiate.rs  list.rs  mod.rs  run.rs  vars.rs
crates/outl-actions/tests/: backlinks_breadcrumb.rs  backlinks_index_disk.rs  bench_backlinks.rs  desync_recovery.rs  reconcile_bench.rs
crates/outl-actions/tests/fixtures/: 2026-07-03.md  2026-07-03.outl
crates/outl-cli/: CLAUDE.md  Cargo.toml
crates/outl-cli/src/: human.rs  main.rs  output.rs  sync_engine.rs  workspace_layout.rs  ws.rs
crates/outl-cli/src/cmd/: backlinks.rs  block.rs  daily.rs  doctor.rs  export.rs  export_v2.rs  import.rs  init.rs  migrate_to_per_page_ops.rs  migrate_to_shared.rs  mod.rs  page.rs  plugin.rs  plugin_init.rs  plugin_source.rs  prop.rs  query.rs  reconcile.rs  search.rs  serve.rs  tag.rs  template.rs  workspace_info.rs
crates/outl-cli/src/mcp/: mod.rs  prompts.rs  protocol.rs  resources.rs
crates/outl-cli/tests/: cli_machine.rs  e2e_full.rs  init_smoke.rs  mcp_smoke.rs  template_run.rs
crates/outl-config/: CLAUDE.md  Cargo.toml
crates/outl-config/src/: lib.rs  paths.rs  schema.rs
crates/outl-core/: CLAUDE.md  Cargo.toml
crates/outl-core/src/: block.rs  content.rs  fractional.rs  hlc.rs  id.rs  journal.rs  lib.rs  lock.rs  log.rs  op.rs  page.rs  property.rs  snapshot.rs  tag.rs  tree.rs  workspace.rs  workspace_id.rs
crates/outl-core/src/storage/: index.rs  jsonl.rs  memory.rs  mod.rs  node_index.rs  sqlite.rs
crates/outl-core/src/tree/: apply.rs  cycle.rs  mod.rs  op.rs
crates/outl-core/tests/: boot_scale_bench.rs  concurrent_text_convergence.rs  convergence.rs  convergence_property.proptest-regressions  convergence_property.rs  lazy_block_text.rs  op_log_io_robustness.rs  peer_snapshot_preserves_local.rs  per_page_peer_visibility.rs  properties_of.rs  snapshot_bench.rs  snapshot_equivalence.rs  snapshot_late_op.rs  snapshot_prod_layout.rs  text_replace_rebuild.rs  tree_unit.rs
crates/outl-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/outl-desktop/src-tauri/capabilities/: default.json
crates/outl-desktop/src-tauri/icons/: icon.icns
crates/outl-desktop/src-tauri/src/: fs_watcher.rs  helpers.rs  iroh_sync.rs  lib.rs  main.rs  plugin_dto.rs  plugin_service.rs  plugin_service_tests.rs  settings.rs  state.rs  workspace_open.rs
crates/outl-exec/: CLAUDE.md  Cargo.toml
crates/outl-exec/src/: language.rs  lib.rs  orchestrate.rs  registry.rs  result_block.rs  runtime.rs  sandbox.rs
crates/outl-exec/src/runtimes/: echo.rs  js.rs  lisp.rs  lua.rs  mod.rs  python.rs  query.rs
crates/outl-exec/src/wasm/: cache.rs  engine.rs  module.rs
crates/outl-md/: CLAUDE.md  Cargo.toml
crates/outl-md/benches/: block_index.rs  common.rs  index.rs  parse.rs
crates/outl-md/src/: block_index.rs  diff.rs  emoji.rs  frontmatter.rs  index.rs  inline.rs  lang.rs  lib.rs  matching.rs  outline_ops.rs  parse.rs  reconcile.rs  render.rs  sidecar.rs  slug.rs  tag.rs  view.rs  wikilink.rs
crates/outl-md/tests/: block_index.rs  block_ref_roundtrip.rs  duplicate_block.rs  external_edit.rs  heavy_edit.rs  identical_blocks_swap.rs  index_perf.rs  inline.rs  roundtrip.rs  sidecar_invariants.rs  workspace_index.rs
crates/outl-mobile/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/outl-mobile/src-tauri/capabilities/: default.json  mobile.json
crates/outl-mobile/src-tauri/icons/: icon.icns
crates/outl-mobile/src-tauri/src/: android_jni.rs  bg_sync.rs  exec.rs  helpers.rs  icloud_path.rs  iroh_sync.rs  lib.rs  main.rs  plugin_registry.rs  plugin_service.rs  state.rs  workspace_open.rs  workspace_picker.rs
crates/outl-plugins/: CLAUDE.md  Cargo.toml
crates/outl-plugins/src/: capability.rs  engine.rs  error.rs  host.rs  host_tests.rs  lib.rs  loader.rs  lockfile.rs  manifest.rs  model.rs  permission.rs  registry.rs  runtime.rs  secrets.rs  settings.rs
crates/outl-shortcuts/: CLAUDE.md  Cargo.toml
crates/outl-shortcuts/src/: action.rs  binding.rs  chord.rs  defaults.rs  lib.rs
crates/outl-sync-iroh/: CLAUDE.md  Cargo.toml
crates/outl-sync-iroh/src/: bind.rs  engine.rs  engine_catchup.rs  engine_gossip.rs  engine_membership.rs  engine_pairing.rs  engine_snapshot.rs  engine_sync.rs  health.rs  identity.rs  lib.rs  pairing.rs  peers.rs  peers_lock.rs  progress.rs  protocol.rs  status.rs  test_support.rs
crates/outl-sync-iroh/tests/: catchup.rs  chaos.rs  integration.rs  regression.rs
crates/outl-sync-iroh/tests/chaos_helpers/: mod.rs
crates/outl-sync-iroh/tests/common/: mod.rs
crates/outl-tauri-shared/: CLAUDE.md  Cargo.toml
crates/outl-tauri-shared/src/: helpers.rs  host.rs  iroh_sync.rs  lib.rs  plugin_dto.rs  plugin_service.rs  plugin_thread.rs  projection.rs  state.rs  workspace_open.rs
crates/outl-tauri-shared/src/commands/: block.rs  exec.rs  mod.rs  page.rs  peers.rs  plugin.rs  template.rs
crates/outl-tauri-shared/tests/: projection_view.rs
crates/outl-theme/: CLAUDE.md  Cargo.toml
crates/outl-theme/src/: lib.rs  palette.rs  presets.rs
crates/outl-tui/: CLAUDE.md  Cargo.toml
crates/outl-tui/src/: app.rs  edit_buffer.rs  editor.rs  fuzzy.rs  input.rs  keymap.rs  lib.rs  main.rs  outline_ops.rs  runtime.rs  state.rs  theme.rs  view.rs
crates/outl-tui/src/actions/: autocomplete.rs  block.rs  collapsed.rs  exec.rs  history.rs  lifecycle.rs  mod.rs  mouse.rs  nav.rs  (+9 more)
crates/outl-tui/tests/: editor_e2e.rs
(+405 files in other folders)
