[workspace]
resolver = "2"
members = [
    "crates/outl-core",
    "crates/outl-md",
    "crates/outl-exec",
    "crates/outl-cli",
    "crates/outl-tui",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.95"
license = "MIT"
authors = ["Avelino <avelinorun@gmail.com>"]
repository = "https://github.com/avelino/outl"
homepage = "https://outl.app"
readme = "README.md"

[workspace.dependencies]
# Internal crates
outl-core = { path = "crates/outl-core", version = "0.2.0" }
outl-md = { path = "crates/outl-md", version = "0.2.0" }
outl-exec = { path = "crates/outl-exec", version = "0.2.0" }
outl-tui = { path = "crates/outl-tui", version = "0.2.0" }

# IDs and time
ulid = { version = "1", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }
toml = "1.1"

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CRDT
yrs = "0.26"

# Storage
rusqlite = { version = "0.39", features = ["bundled"] }

# Markdown
comrak = { version = "0.52", default-features = false }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# CLI
clap = { version = "4", features = ["derive"] }

# Filesystem
notify = "8"
notify-debouncer-full = "0.7"
walkdir = "2"
fs2 = "0.4"

# Concurrency
parking_lot = "0.12"

# Misc
sha2 = "0.11"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Dev
proptest = "1"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
