[workspace]
resolver = "2"
members = [
    "crates/outl-core",
    "crates/outl-md",
    "crates/outl-actions",
    "crates/outl-sync-iroh",
    "crates/outl-config",
    "crates/outl-exec",
    "crates/outl-shortcuts",
    "crates/outl-theme",
    "crates/outl-cli",
    "crates/outl-tui",
    "crates/outl-mobile/src-tauri",
    "crates/outl-desktop/src-tauri",
    "xtask",
]

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.95"
license = "MIT"
authors = ["Avelino <avelinorun@gmail.com>"]
repository = "https://github.com/avelino/outl"
homepage = "https://outl.app"
readme = "README.md"

[workspace.dependencies]
# Internal crates
outl-core = { path = "crates/outl-core", version = "0.7.0" }
outl-md = { path = "crates/outl-md", version = "0.7.0" }
outl-actions = { path = "crates/outl-actions", version = "0.7.0" }
outl-sync-iroh = { path = "crates/outl-sync-iroh", version = "0.7.0" }
outl-config = { path = "crates/outl-config", version = "0.7.0" }
outl-exec = { path = "crates/outl-exec", version = "0.7.0" }
outl-shortcuts = { path = "crates/outl-shortcuts", version = "0.7.0" }
outl-theme = { path = "crates/outl-theme", version = "0.7.0" }
outl-tui = { path = "crates/outl-tui", version = "0.7.0" }

# IDs and time
ulid = { version = "1", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
toml = "1.1"

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CRDT
yrs = "0.27"

# P2P sync (iroh)
# `default-features` stays ON: iroh 1.0.0 ships its TLS backend (tls-ring) and
# the n0 discovery stack behind the default feature set. Disabling it strips
# TLS and the endpoint fails to bind. There is no `discovery-n0` feature in
# 1.0.0 — discovery presets live in `iroh::endpoint::presets`.
iroh = "1.0.0"
iroh-gossip = "0.101.0"

# Markdown
comrak = { version = "0.52", default-features = false }
emojis = "0.9"

# TUI
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Filesystem
notify = "8"
notify-debouncer-full = "0.7"
walkdir = "2"
fs2 = "0.4"

# Concurrency
parking_lot = "0.12"

# Misc
sha2 = "0.11"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "6"

# Tauri clients (desktop + mobile src-tauri)
rustls = { version = "0.23", features = ["ring"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"

# Dev
proptest = "1"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
