[workspace]
resolver = "2"
members = [
    "crates/outl-core",
    "crates/outl-md",
    "crates/outl-actions",
    "crates/outl-sync-iroh",
    "crates/outl-config",
    "crates/outl-exec",
    "crates/outl-plugins",
    "crates/outl-shortcuts",
    "crates/outl-theme",
    "crates/outl-tauri-shared",
    "crates/outl-cli",
    "crates/outl-tui",
    "crates/outl-mobile/src-tauri",
    "crates/outl-desktop/src-tauri",
    "xtask",
]

[workspace.package]
version = "0.8.0"
edition = "2021"
rust-version = "1.95"
license = "MIT"
authors = ["Avelino <avelinorun@gmail.com>"]
repository = "https://github.com/avelino/outl"
homepage = "https://outl.app"
readme = "README.md"

[workspace.dependencies]
# Internal crates
outl-core = { path = "crates/outl-core", version = "0.8.0" }
outl-md = { path = "crates/outl-md", version = "0.8.0" }
outl-actions = { path = "crates/outl-actions", version = "0.8.0" }
outl-sync-iroh = { path = "crates/outl-sync-iroh", version = "0.8.0" }
outl-config = { path = "crates/outl-config", version = "0.8.0" }
outl-exec = { path = "crates/outl-exec", version = "0.8.0" }
outl-plugins = { path = "crates/outl-plugins", version = "0.8.0" }
outl-shortcuts = { path = "crates/outl-shortcuts", version = "0.8.0" }
outl-theme = { path = "crates/outl-theme", version = "0.8.0" }
outl-tauri-shared = { path = "crates/outl-tauri-shared", version = "0.8.0" }
outl-tui = { path = "crates/outl-tui", version = "0.8.0" }

# IDs and time
ulid = { version = "1", features = ["serde"] }

# OS keychain for per-plugin secrets (`ctx.secrets`). Native stores on macOS /
# Windows; on Linux the Secret Service via `async-secret-service` (zbus, pure
# Rust) + `crypto-rust` — NOT `sync-secret-service`, which pulls the C
# `libdbus-sys` and needs `libdbus-1-dev` on every Linux build (CI has none).
# `async-io` gives the blocking wrapper its reactor; the keyring API stays sync.
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "async-secret-service",
    "crypto-rust",
    "async-io",
] }
# Hidden-input prompt for `outl plugin secret set` (never echo a token).
rpassword = "7"

# Versioning (plugin api/engine semver ranges)
semver = { version = "1", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
toml = "1.1"
# Compact binary serialization for snapshots (see docs/storage.md → Snapshots).
bincode = "1"

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CRDT
yrs = "0.27"

# P2P sync (iroh)
# `default-features` stays ON: iroh 1.0.0 ships its TLS backend (tls-ring) and
# the n0 discovery stack behind the default feature set. Disabling it strips
# TLS and the endpoint fails to bind. There is no `discovery-n0` feature in
# 1.0.0 — discovery presets live in `iroh::endpoint::presets`.
#
# `platform-verifier` pulls in `rustls-platform-verifier` so we can delegate
# relay-TLS validation to the OS keychain via `CaTlsConfig::system()` (see
# `outl-sync-iroh/src/bind.rs`). Without it iroh's default
# `CaTlsConfig::EmbeddedWebPki` (Mozilla's bundled roots) rejects any relay cert
# issued by a custom root CA installed in the OS keychain — e.g. a corporate
# TLS-inspection proxy — with `invalid peer certificate: UnknownIssuer`, even
# though macOS / curl / Safari trust it fine. Enabling the feature is NOT enough
# on its own: `system()` must be passed explicitly (default stays EmbeddedWebPki).
iroh = { version = "1.0.0", features = ["platform-verifier"] }
iroh-gossip = "0.101.0"

# Markdown
comrak = { version = "0.52", default-features = false }
emojis = "0.9"

# TUI
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Filesystem
notify = "8"
notify-debouncer-full = "0.7"
walkdir = "2"
fs2 = "0.4"

# Concurrency
parking_lot = "0.12"
lru = "0.18"

# Misc
sha2 = "0.11"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# IANA timezone database — resolves a configured zone name ("Europe/London")
# to the correct UTC offset per date (DST-aware), for `outl_actions::clock`.
chrono-tz = "0.10"
dirs = "6"

# Tauri clients (desktop + mobile src-tauri)
log = "0.4"
rustls = { version = "0.23", features = ["ring"] }
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"

# Dev
proptest = "1"
tempfile = "3"
libc = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
