[package]
name = "outl-cli"
description = "The `outl` command-line binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"

[[bin]]
name = "outl"
path = "src/main.rs"

[dependencies]
outl-core = { workspace = true }
outl-md = { workspace = true }
outl-actions = { workspace = true }
outl-sync-iroh = { workspace = true }
outl-config = { workspace = true }
outl-tui = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
walkdir = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
parking_lot = { workspace = true }
dirs = { workspace = true }
# Only `outl peer pair` needs a runtime — to drive the async iroh pairing
# handshake from this otherwise-sync binary. Minimal multi-thread feature set.
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = { workspace = true }
