[package]
name = "outl-desktop"
description = "Desktop client for outl (Tauri 2 + Solid, macOS/Linux/Windows)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "outl_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = { workspace = true }

[dependencies]
outl-core = { workspace = true }
outl-md = { workspace = true }
outl-actions = { workspace = true }
outl-config = { workspace = true }
outl-exec = { workspace = true }
outl-shortcuts = { workspace = true }
outl-theme = { workspace = true }

tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
notify = "8"
notify-debouncer-full = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
yrs = { workspace = true }
anyhow = { workspace = true }
