[package]
name = "outl-desktop"
description = "Desktop client for outl (Tauri 2 + Solid, macOS/Linux/Windows)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "outl_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = { workspace = true }

[dependencies]
outl-core = { workspace = true }
outl-md = { workspace = true }
outl-actions = { workspace = true }
outl-config = { workspace = true }
outl-exec = { workspace = true }
outl-plugins = { workspace = true, features = ["registry"] }
outl-shortcuts = { workspace = true }
outl-tauri-shared = { workspace = true }
outl-theme = { workspace = true }
outl-sync-iroh = { workspace = true }
dirs = { workspace = true }
# Pin the rustls crypto provider. iroh pulls rustls with default features off,
# dropping the workspace-wide default provider, which makes reqwest (Tauri's
# webview asset protocol) panic at boot. `run()` installs `ring` explicitly.
rustls = { workspace = true }

tauri = { workspace = true }
tauri-plugin-dialog = "2"
tauri-plugin-opener = { workspace = true }
tauri-plugin-os = { workspace = true }
# `outl://` deep links (Raycast "open in app", shared launchers). The
# single-instance plugin's `deep-link` feature forwards the URL to the
# already-running instance on Linux/Windows (macOS routes it natively).
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
notify = "8"
notify-debouncer-full = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
# Installs an stderr log subscriber at boot so the iroh transport's
# info!/warn!/debug! lines are visible in the terminal running the app.
tracing-subscriber = { workspace = true }
yrs = { workspace = true }
anyhow = { workspace = true }
