[package]
name = "outl-mobile"
description = "Mobile companion app for outl (Tauri 2 + Solid)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "outl_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = { workspace = true }

[dependencies]
outl-core = { workspace = true }
outl-md = { workspace = true }
outl-actions = { workspace = true }
outl-sync-iroh = { workspace = true }
outl-config = { workspace = true }
dirs = "5"
# Pin the rustls crypto provider. iroh pulls rustls with default features off,
# dropping the workspace-wide default provider, which makes reqwest (Tauri's
# webview asset protocol) panic at boot. `run()` installs `ring` explicitly.
rustls = { version = "0.23", features = ["ring"] }
# Code-block runtime. `lang-rust` deliberately disabled: it pulls in
# wasmtime + Cranelift JIT, which inflates the IPA and runs into iOS
# code-signing restrictions on dynamic code generation. Lisp / JS /
# Python / Lua are in-process pure-Rust interpreters and ship fine on
# iOS. Declared with `path` (not `workspace = true`) so we can opt out
# of the workspace dep's default features without changing them for
# every other consumer (CLI / TUI / desktop).
outl-exec = { path = "../../outl-exec", default-features = false, features = [
    "lang-lisp",
    "lang-js",
    "lang-python",
    "lang-lua",
] }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
# Installs an stderr log subscriber at boot so the transport's info!/warn!/debug!
# lines reach the device console (idevicesyslog / Xcode on iOS).
tracing-subscriber = { workspace = true }
yrs = { workspace = true }

# Barcode / QR scanner — mobile-only (Android + iOS). The primary
# mobile pairing flow is "scan the host's QR ticket", so the scanner is
# the camera entry point into `peerPairJoin`. Desktop has no camera path,
# hence the per-target gate (also keeps the plugin out of host-side
# `cargo check`/clippy on macOS).
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSFileManager",
    "NSString",
    "NSURL",
] }
